cleaned up pages

--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -5,7 +5,7 @@
   <meta name="description" content="{{ metaDescription or renderData.metaDescription or summary or metadata.description }}">  
   <link rel="dns-prefetch" href="https://identity.netlify.com">
   
-  <meta property="og:image" content="https://friendly-sawine-3fb126.netlify.app/{{ image }}">
+  <meta property="og:image" content="https://cafe2024.netlify.app/{{ image }}">
 
   {# Canonical URL #}
   {% if canonical %}
