--- a/src/feed.njk
+++ b/src/feed.njk
@@ -7,7 +7,7 @@
     "title": "BinaryDigit",
     "subtitle": "My internet home",
     "language": "en",
-    "url": "https://localhost",
+    "url": "https://cafe2024.netlify.app",
     "author": {
       "name": "BinaryDigit",
       "email": "binarydigit@omg.lol"
