--- a/src/_layouts/contact.njk
+++ b/src/_layouts/contact.njk
@@ -7,5 +7,5 @@ section: contact
   <hr/>
   {{ layoutContent | safe }}
 
-  {% include "partials/form.njk" %}
+  {# {% include "partials/form.njk" %} #}
 </div>
