--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ layout: base.njk
 section: home
 ---
 <div class="home-page">
-
+  <div class="home-page__bg-square"></div>
   {# Hero #}
   <div class="hero">
     <div class="hero__col">
