ajust home image

--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -4,6 +4,8 @@
   <title>{{ renderData.title or title or metadata.title }}</title>
   <meta name="description" content="{{ metaDescription or renderData.metaDescription or summary or metadata.description }}">  
   <link rel="dns-prefetch" href="https://identity.netlify.com">
+  {# fontawesome #}
+  <script src="https://kit.fontawesome.com/427b20d5d3.js" crossorigin="anonymous"></script>
   
   <meta property="og:image" content="https://cafe2024.netlify.app/{{ image }}">
 
