--- a/src/assets/scss/global/variables.scss
+++ b/src/assets/scss/global/variables.scss
@@ -1,7 +1,7 @@
 :root {
   /* Brand Colors */
   --color-primary: #222;
-  --color-secondary: #2f5bc2;
+  --color-secondary: #228be6;
 
   /* Background Colors */
   --color-bg: #fff;
@@ -36,9 +36,9 @@
   --shadow: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -2px rgb(0 0 0 / 5%);
 
   // Dark mode colors
-  --color-secondary-dark: rgb(22, 78, 99);
+  --color-secondary-dark: #e64980;
 
-  --color-link-dark: rgb(8, 145, 178);
+  --color-link-dark: #e64980;
 
   --color-bg-dark: #000;
   --color-bg-wrapper-bg-dark: rgb(24 24 27);
