add footer and bg

--- a/src/assets/scss/global/base-styles.scss
+++ b/src/assets/scss/global/base-styles.scss
@@ -24,6 +24,7 @@ body {
   :root[data-theme="dark"] & {
     background-color: var(--color-bg-dark);
     color: var(--color-text-dark);
+    background-image: url('https://cdn.some.pics/binarydigit/65f51e6bed7d0.png');
   }
 }
 
