--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,6 +1,14 @@
 <footer class="site-footer">
+  <center>
   <small>
-    Website built with <a href="https://www.11ty.dev/" target="_blank">Eleventy</a>.
-    Source code on <a href="{{ pkg.repository.url }}" target="_blank">GitHub</a>.
+      <!-- Webring --> 
+        <a href="https://webri.ng/webring/cssjoy/previous?via=https://binarydigit.cafe/"><i class="fa-regular fa-circle-left"></i></a>
+        <a href="https://webri.ng/webring/cssjoy/random?via=https://binarydigit.cafe/"><i class="omg-icon omg-sarajoy"></i> CS Joy</a>
+        <a href="https://webri.ng/webring/cssjoy/next?via=https://binarydigit.cafe/">&nbsp;<i class="fa-regular fa-circle-right"></i></a> 
+      <!-- Webring -->
+<br>
+<a rel="me" href="/feed.xml"><i class="fa-solid fa-rss"></i>&nbsp;RSS</a>
   </small>
+  </center>
 </footer>
+
