--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -4,9 +4,9 @@
   <title>{{ renderData.title or title or metadata.title }}</title>
   <meta name="description" content="{{ metaDescription or renderData.metaDescription or summary or metadata.description }}">  
   <link rel="dns-prefetch" href="https://identity.netlify.com">
-  {# fontawesome #}
   <script src="https://kit.fontawesome.com/427b20d5d3.js" crossorigin="anonymous"></script>
-  
+  <link rel="stylesheet" type="text/css" href="https://cdn.cache.lol/profiles/icons/omg.lol-icons.css?v=2">
+  <link href="https://binarydigit.cafe" rel="me">
   <meta property="og:image" content="https://cafe2024.netlify.app/{{ image }}">
 
   {# Canonical URL #}
