--- a/src/assets/scss/layouts/home.scss
+++ b/src/assets/scss/layouts/home.scss
@@ -14,12 +14,12 @@
   grid-template-rows: auto auto;
   column-gap: 70px;
   max-width: 1100px;
-  margin: 0 auto;
+  // margin: 0 auto;
 
   @media (min-width: 1024px) {
     grid-template-columns: 3fr 2fr;
     row-gap: 20px;
-    margin: 50px auto;
+    // margin: 0px auto;
   }
 }
 
