--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -23,9 +23,31 @@ section: post
       </p>
     {% endif %}
 
+
+<h5><details>
+  <summary>Comment with GitHub <i class="fa-brands fa-github"></i></summary>
+    <script src="https://giscus.app/client.js"
+            data-repo="BinaryDigitCode/cafe"
+            data-repo-id="R_kgDOLqVNSg"
+            data-category="[ENTER CATEGORY NAME HERE]"
+            data-category-id="[ENTER CATEGORY ID HERE]"
+            data-mapping="pathname"
+            data-strict="0"
+            data-reactions-enabled="1"
+            data-emit-metadata="0"
+            data-input-position="top"
+            data-theme="preferred_color_scheme"
+            data-lang="en"
+            data-loading="lazy"
+            crossorigin="anonymous"
+            async>
+    </script>
+</details>
+</h5>
   </article>
 
+
   <nav>
-    <a href="{{ '/blog/' | url }}">← View All Articles</a>
+    <a href="{{ '/blog/' | url }}">← All Posts</a>
   </nav>
 </div>
