--- a/src/assets/scss/global/utilites.scss
+++ b/src/assets/scss/global/utilites.scss
@@ -17,7 +17,7 @@
 }
 
 .gradient-text {
-  background: linear-gradient(130deg, #89cf9b, #6BAFF2 41.07%, #CAA1E0 76.05%);
+  background: linear-gradient(130deg, #6741d9, #1971c2 41.07%, #e64980 76.05%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
