--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -2,9 +2,9 @@
   <center>
   <small>
       <!-- Webring --> 
-        <a href="https://webri.ng/webring/cssjoy/previous?via=https://binarydigit.cafe/"><i class="fa-regular fa-circle-left"></i></a>
+        {# <a href="https://webri.ng/webring/cssjoy/previous?via=https://binarydigit.cafe/"><i class="fa-regular fa-circle-left"></i></a>
         <a href="https://webri.ng/webring/cssjoy/random?via=https://binarydigit.cafe/"><i class="omg-icon omg-sarajoy"></i> CS Joy</a>
-        <a href="https://webri.ng/webring/cssjoy/next?via=https://binarydigit.cafe/">&nbsp;<i class="fa-regular fa-circle-right"></i></a> 
+        <a href="https://webri.ng/webring/cssjoy/next?via=https://binarydigit.cafe/">&nbsp;<i class="fa-regular fa-circle-right"></i></a>  #}
       <!-- Webring -->
 <br>
 <a rel="me" href="/feed.xml"><i class="fa-solid fa-rss"></i>&nbsp;RSS</a>
