--- a/src/assets/scss/layouts/home.scss
+++ b/src/assets/scss/layouts/home.scss
@@ -31,7 +31,7 @@
 
 .hero__image {
   max-width: 300px;
-  // border-radius: var(--border-radius);
+  border-radius: var(--border-radius);
   transition: filter 0.4s ease-out;
 
   @media (min-width: 1024px) {
@@ -42,7 +42,7 @@
 .hero__title {
   @media (min-width: 1024px) {
     margin-top: 0;
-    font-size: 3em;
+    font-size: 2.5em;
   }
 }
 
@@ -72,4 +72,8 @@
 
 .list-header__title {
   margin: 0;
+}
+
+.statuslol_time{
+  font-size: 0.8em;
 }
