--- a/src/index.njk
+++ b/src/index.njk
@@ -26,21 +26,23 @@ section: home
 
   </div>
 
+
   {# Articles #}
   <div class="list-header">
-    <h2 class="list-header__title">Posts</h2>
+    <h2 class="list-header__title"><i class="fa-solid fa-newspaper"></i> Posts</h2>
     <a class="btn btn--outline btn--sm" href="/blog">View All</a>
   </div>
   {% from "macros/articlelist.njk" import articlelist %}
   {{ articlelist(
     articles = collections.post | reverse,
-    show_tags = true,
+    show_tags = false,
     limit = 3
   ) }}
-
+  <br>
+  
   {# Projects #}
   {# <div class="list-header">
-    <h2 class="list-header__title">Projects</h2>
+    <h2 class="list-header__title"><i class="fa-solid fa-book"></i> Projects</h2>
     <a class="btn btn--outline btn--sm" href="/projects">View All</a>
   </div>
   {% from "macros/projectlist.njk" import projectlist %}
@@ -48,10 +50,10 @@ section: home
    #}
 
   {# Status.lol #}
-    <div class="list-header">
-    <h2 class="list-header__title">Statuslog</h2>
+  <div class="list-header">
+    <h2 class="list-header__title"><i class="fa-regular fa-comment-dots"></i> Statuslog</h2>
     <a class="btn btn--outline btn--sm" href="https://binarydigit.status.lol/">View All</a>
-    </div>
+  </div>
     <script src="https://status.lol/binarydigit.js?time&link&fluent"></script>
 
 </div>
