--- a/src/index.njk
+++ b/src/index.njk
@@ -41,13 +41,13 @@ section: home
   <br>
   
   {# Projects #}
-  {# <div class="list-header">
+  <div class="list-header">
     <h2 class="list-header__title"><i class="fa-solid fa-book"></i> Projects</h2>
     <a class="btn btn--outline btn--sm" href="/projects">View All</a>
   </div>
   {% from "macros/projectlist.njk" import projectlist %}
   {{ projectlist(projects = collections.project | reverse) }}
-   #}
+  
 
   {# Status.lol #}
   <div class="list-header">
