--- a/src/feed.njk
+++ b/src/feed.njk
@@ -7,7 +7,7 @@
     "title": "BinaryDigit",
     "subtitle": "My internet home",
     "language": "en",
-    "url": "https://cafe2024.netlify.app",
+    "url": "https://cafe2024.netlify.app/",
     "author": {
       "name": "BinaryDigit",
       "email": "binarydigit@omg.lol"
@@ -16,23 +16,31 @@
 }
 ---
 <?xml version="1.0" encoding="utf-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ metadata.url }}" xmlns:atom="http://www.w3.org/2005/Atom">
-  <channel>
-    <title>{{ metadata.title }}</title>
-    <link>{{ metadata.url }}</link>
-    <atom:link href="{{ permalink | absoluteUrl(metadata.url) }}" rel="self" type="application/rss+xml" />
-    <description>{{ metadata.subtitle }}</description>
-    <language>{{ metadata.language }}</language>
-    {%- for post in collections.post | reverse %}
-    {%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
-    <item>
-      <title>{{ post.data.title }}</title>
-      <link>{{ absolutePostUrl }}</link>
-      <description>{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</description>
-      <pubDate>{{ post.date | dateToRfc822 }}</pubDate>
-      <dc:creator>{{ metadata.author.name }}</dc:creator>
-      <guid>{{ absolutePostUrl }}</guid>
-    </item>
-    {%- endfor %}
-  </channel>
-</rss>
+<feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ metadata.language }}">
+  <title>{{ metadata.title }}</title>
+  <subtitle>{{ metadata.subtitle }}</subtitle>
+  <link href="{{ permalink | url | absoluteUrl(metadata.url) }}" rel="self"/>
+  <link href="{{ metadata.url }}"/>
+  <updated>{{ collections.posts | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
+  <id>{{ metadata.url }}</id>
+  <author>
+    <name>{{ metadata.author.name }}</name>
+    <email>{{ metadata.author.email }}</email>
+  </author>
+  {%- for post in collections.post | reverse %}
+  {% set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
+  <entry>
+    <title>{{ post.data.title }}</title>
+    <link href="{{ absolutePostUrl }}"/>
+    <updated>{{ post.date | dateToRfc3339 }}</updated>
+    <id>{{ absolutePostUrl }}</id>
+    <content type="html">
+      {%- if normalizeAbsoluteUrls -%}
+        {{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
+      {%- else -%}
+        {{ post.templateContent }}
+      {%- endif -%}
+    </content>
+  </entry>
+  {%- endfor %}
+</feed>
