try another rss config

--- a/src/feed.njk
+++ b/src/feed.njk
@@ -4,8 +4,8 @@
   "eleventyExcludeFromCollections": true,
   "normalizeAbsoluteUrls": true,
   "metadata": {
-    "title": "BinaryDigit",
-    "subtitle": "My internet home",
+    "title": "BinaryDigit.cafe",
+    "subtitle": "B's corner of the internet.",
     "language": "en",
     "url": "https://cafe2024.netlify.app/",
     "author": {
