--- a/src/assets/scss/layouts/blog.scss
+++ b/src/assets/scss/layouts/blog.scss
@@ -50,7 +50,8 @@
 }
 
 .article-card__title {
-  margin: 5px 0;
+  margin-top: 2px;
+  margin-bottom: 30px;
 }
 
 .article-card__summary {
@@ -60,6 +61,11 @@
   :root[data-theme="dark"] & {
     color: var(--color-text-dark);
   }
+}
+
+.article-card__image {
+  margin-bottom: 0;
+  width: 100%;
 }
 
 /* Tags */
