--- a/src/assets/scss/layouts/blog.scss
+++ b/src/assets/scss/layouts/blog.scss
@@ -1,3 +1,15 @@
+// Attempt to copy project grid
+.article-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 40px;
+  margin: 40px 0;
+
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 /* Article card */
 .article-card {
   margin-top: 20px;
@@ -14,7 +26,7 @@
   }
 
   &--tags {
-    border-bottom: 2px solid var(--color-border);
+    // border-bottom: 2px solid var(--color-border);
     border-radius: 0;
 
     :root[data-theme="dark"] & {
@@ -64,8 +76,9 @@
 }
 
 .article-card__image {
-  margin-bottom: 0;
+  // margin-bottom: 0;
   width: 100%;
+  margin: auto;
 }
 
 /* Tags */
