--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,15 +1,21 @@
 <footer class="site-footer">
   <center>
-  <small>
-      <!-- Webring --> 
-        {# <a href="https://webri.ng/webring/cssjoy/previous?via=https://binarydigit.cafe/"><i class="fa-regular fa-circle-left"></i></a>
-        <a href="https://webri.ng/webring/cssjoy/random?via=https://binarydigit.cafe/"><i class="omg-icon omg-sarajoy"></i> CS Joy</a>
-        <a href="https://webri.ng/webring/cssjoy/next?via=https://binarydigit.cafe/">&nbsp;<i class="fa-regular fa-circle-right"></i></a>  #}
-      <!-- Webring -->
+  {# <small> #}
+    <!-- Webring --> 
+      <a href="https://webri.ng/webring/cssjoy/previous?via=https://binarydigit.cafe/"><i class="fa-regular fa-circle-left"></i></a>
+      <a href="https://webri.ng/webring/cssjoy/random?via=https://binarydigit.cafe/"><i class="omg-icon omg-sarajoy"></i> CS Joy</a>
+      <a href="https://webri.ng/webring/cssjoy/next?via=https://binarydigit.cafe/">&nbsp;<i class="fa-regular fa-circle-right"></i></a> 
+    <!-- Webring -->
 <br>
-<a rel="me" href="/feed.xml"><i class="fa-solid fa-rss"></i>&nbsp;RSS</a>
+  <a rel="me" href="/feed.xml"><i class="fa-solid fa-rss"></i>&nbsp;RSS</a>
 <br>
- </small>
+ {# </small> #}
   </center>
+  
+<link href="mailto:hi@binarydigit.cafe" rel="me">
+<link href="https://binarydigit.cafe" rel="me">
+<link href="https://proven.lol/77dc7d" rel="me">
+<link href="https://social.lol/@binarydigit" rel="me">
+<link href="https://mstdn.games/@BinaryDigit" rel="me">
 </footer>
 
