--- a/src/assets/scss/global/base-styles.scss
+++ b/src/assets/scss/global/base-styles.scss
@@ -7,7 +7,8 @@
 /* Body */
 html {
   scroll-padding-top: 100px;
-  font-size: 62.5%;
+  font-size: 50%;
+  // font-size: 62.5%;
   font-family: var(--font-family-base);
 }
 
@@ -87,7 +88,7 @@ h4,
 h5,
 h6 {
   font-family: var(--font-family-heading);
-  font-weight: 800;
+  font-weight: 700;
   margin-top: 3rem;
   margin-bottom: 1.5rem;
   overflow-wrap: break-word;
