--- a/src/assets/scss/layouts/projects.scss
+++ b/src/assets/scss/layouts/projects.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 40px;
+  // margin: 30px 0 40px 0;
   margin: 40px 0;
 
   @media (min-width: 1024px) {
