--- a/src/index.njk
+++ b/src/index.njk
@@ -23,36 +23,34 @@ section: home
         "eager"
       %} 
     </div>
-
   </div>
-
 
   {# Articles #}
   <div class="list-header">
-    <h2 class="list-header__title"><i class="fa-solid fa-newspaper"></i> Latest Post</h2>
+    <h2 class="list-header__title"><i class="fa-solid fa-newspaper"></i> Latest Posts</h2>
     <a class="btn btn--outline btn--sm" href="/blog">View All</a>
   </div>
   {% from "macros/articlelist.njk" import articlelist %}
   {{ articlelist(
     articles = collections.post | reverse,
     show_tags = true,
-    limit = 2
+    limit = 4
   ) }}
   <br>
   
   {# Projects #}
-  <div class="list-header">
+  {# <div class="list-header">
     <h2 class="list-header__title"><i class="fa-solid fa-book"></i> Projects</h2>
     <a class="btn btn--outline btn--sm" href="/projects">View All</a>
   </div>
   {% from "macros/projectlist.njk" import projectlist %}
   {{ projectlist(projects = collections.project | reverse) }}
-  
+   #}
 
   {# Status.lol #}
   <div class="list-header">
     <h2 class="list-header__title"><i class="fa-regular fa-comment-dots"></i> Statuslog</h2>
-    <a class="btn btn--outline btn--sm" href="https://binarydigit.status.lol/">View All</a>
+    <a class="btn btn--outline btn--sm" href="https://binarydigit.status.lol/">All Statuses</a>
   </div>
     <script src="https://status.lol/binarydigit.js?time&link&fluent"></script>
 
