changed over domain

--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -6,7 +6,7 @@
   <link rel="dns-prefetch" href="https://identity.netlify.com">
   <script src="https://kit.fontawesome.com/427b20d5d3.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.cache.lol/profiles/icons/omg.lol-icons.css?v=2">
-  <meta property="og:image" content="https://cafe2024.netlify.app/{{ image }}">
+  <meta property="og:image" content="https://binarydigit.cafe/{{ image }}">
 
   {# Canonical URL #}
   {% if canonical %}
