--- a/src/feed.njk
+++ b/src/feed.njk
@@ -7,7 +7,7 @@
     "title": "BinaryDigit.cafe",
     "subtitle": "B's corner of the internet.",
     "language": "en",
-    "url": "https://cafe2024.netlify.app/",
+    "url": "https://binarydigit.cafe/",
     "author": {
       "name": "BinaryDigit",
       "email": "binarydigit@omg.lol"
