--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -38,6 +38,11 @@
             <a class="site-header__link" href="https://ko-fi.com/binarydigit" target="_blank"><i class="fa-solid fa-mug-saucer fa-lg"></i>
             </a>
           </li>
+          
+          <li class="site-header__item">
+            <a class="site-header__link" href="/feed.xml" target="_blank"><i class="fa-solid fa-rss fa-lg"></i>
+            </a>
+          </li>
 
 
         {% if global.enable_theme_switch %}
