Add Umami Analytics

--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -5,6 +5,7 @@
   <meta name="description" content="{{ metaDescription or renderData.metaDescription or summary or metadata.description }}">  
   <link rel="dns-prefetch" href="https://identity.netlify.com">
   <script src="https://kit.fontawesome.com/427b20d5d3.js" crossorigin="anonymous"></script>
+  <script defer src="https://analytics.us.umami.is/script.js" data-website-id="05642f13-94fe-4cfe-83f5-b9f70b043795"></script>
   <meta property="og:image" content="https://binarydigit.cafe/{{ image }}">
 
   {# Canonical URL #}
