--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -9,7 +9,7 @@
     <!-- Webring -->
     </p>
     <p>
-     &#169; 2024 BinaryDigit
+    <a href="https://us.umami.is/share/4clz13O9ggz4KuhN/binarydigit.cafe">Analytics</a> | &#169; 2024 BinaryDigit
     </p>
  {# </small> #}
   </center>
