--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -12,6 +12,9 @@
     <a href="https://us.umami.is/share/4clz13O9ggz4KuhN/binarydigit.cafe">Analytics</a> | &#169; 2024 BinaryDigit
     </p>
  {# </small> #}
+ <p>
+  <a href="https://ko-fi.com/andycarolan/shop"><img src="/assets/img/NoAi_03.png" alt="button created by Andy Carolan"></a>
+ </p>
   </center>
   
 <link href="mailto:hi@binarydigit.cafe" rel="me">
