edit giscus category

--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -29,7 +29,7 @@ section: post
 <script src="https://giscus.app/client.js"
         data-repo="BinaryDigitCode/cafe"
         data-repo-id="R_kgDOLqVNSg"
-        data-category="Announcements"
+        data-category="Comments"
         data-category-id="DIC_kwDOLqVNSs4Cej6h"
         data-mapping="pathname"
         data-strict="0"
