--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -23,30 +23,33 @@ section: post
       </p>
     {% endif %}
 
-
-<h5><details>
-  <summary>Comment with GitHub <i class="fa-brands fa-github"></i></summary>
-<script src="https://giscus.app/client.js"
-        data-repo="BinaryDigitCode/cafe"
-        data-repo-id="R_kgDOLqVNSg"
-        data-category="Comments"
-        data-category-id="DIC_kwDOLqVNSs4Cej6h"
-        data-mapping="pathname"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="preferred_color_scheme"
-        data-lang="en"
-        crossorigin="anonymous"
-        async>
-</script>
-</details>
-</h5>
-  </article>
-
+<br>
 
   <nav>
-    <a href="{{ '/blog/' | url }}">← All Posts</a>
+    <h5><a href="{{ '/blog/' | url }}">← All Posts</a></h5>
   </nav>
+
+    <h5>
+      <details open>
+      <summary>Comment with GitHub <i class="fa-brands fa-github"></i></summary>
+    <script src="https://giscus.app/client.js"
+            data-repo="BinaryDigitCode/cafe"
+            data-repo-id="R_kgDOLqVNSg"
+            data-category="Comments"
+            data-category-id="DIC_kwDOLqVNSs4Cej6h"
+            data-mapping="pathname"
+            data-strict="0"
+            data-reactions-enabled="1"
+            data-emit-metadata="0"
+            data-input-position="top"
+            data-theme="preferred_color_scheme"
+            data-lang="en"
+            crossorigin="anonymous"
+            async>
+    </script>
+    </details>
+    </h5>
+
+  </article>
+
 </div>
