--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -4,7 +4,7 @@
     <p>
     <!-- Webring --> 
       <a href="https://webri.ng/webring/cssjoy/previous?via=https://binarydigit.cafe/"><i class="fa-regular fa-circle-left"></i></a>
-      <a href="https://webri.ng/webring/cssjoy/random?via=https://binarydigit.cafe/">CS Joy</a>
+      <a href="https://webri.ng/webring/cssjoy/random?via=https://binarydigit.cafe/">CSS JOY</a>
       <a href="https://webri.ng/webring/cssjoy/next?via=https://binarydigit.cafe/">&nbsp;<i class="fa-regular fa-circle-right"></i></a> 
     <!-- Webring -->
     </p>
