--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -5,11 +5,8 @@
     <!-- Webring --> 
       <a href="https://webri.ng/webring/cssjoy/previous?via=https://binarydigit.cafe/"><i class="fa-regular fa-circle-left"></i></a>
       <a href="https://webri.ng/webring/cssjoy/random?via=https://binarydigit.cafe/">CSS JOY</a>
-      <a href="https://webri.ng/webring/cssjoy/next?via=https://binarydigit.cafe/">&nbsp;<i class="fa-regular fa-circle-right"></i></a> 
+      <a href="https://webri.ng/webring/cssjoy/next?via=https://binarydigit.cafe/"><i class="fa-regular fa-circle-right"></i></a> 
     <!-- Webring -->
-    </p>
-    <p>
-    <a href="https://us.umami.is/share/4clz13O9ggz4KuhN/binarydigit.cafe">Analytics</a> | &#169; 2024 BinaryDigit
     </p>
  {# </small> #}
  <p>
