--- a/src/tags/tags.njk
+++ b/src/tags/tags.njk
@@ -6,7 +6,7 @@ pagination:
 permalink: /tags/{{ tag }}/
 layout: base.njk
 renderData:
-  title: "Posts tagged “{{ tag }}”"
+  title: "Articles tagged “{{ tag }}”"
   metaDescription: "All posts from the Blog tagged with “{{ tag }}”"
 ---
 <div class="page-container">
