robots.txt updated

--- a/src/_includes/macros/articlelist.njk
+++ b/src/_includes/macros/articlelist.njk
@@ -16,11 +16,11 @@
             </p>
           {% endif %}
           
-          {# {% if article.data.summary %}
+          {% if article.data.summary %}
             <p class="article-card__summary">
               {{ article.data.summary }}
             </p>
-          {% endif %} #}
+          {% endif %}
 
           {% if article.data.tags and show_tags %}
             <p class="tag-list">
