--- a/src/robots.njk
+++ b/src/robots.njk
@@ -3,13 +3,7 @@ layout: false
 permalink: robots.txt
 eleventyExcludeFromCollections: true
 ---
-# Dark Visitors robots.txt
-
-# AI Data Scraper
-# https://darkvisitors.com/agents/anthropic-ai
-
-User-agent: anthropic-ai
-Disallow: /
+# Dark Visitors Robots.txt
 
 # AI Data Scraper
 # https://darkvisitors.com/agents/bytespider
@@ -21,6 +15,12 @@ Disallow: /
 # https://darkvisitors.com/agents/ccbot
 
 User-agent: CCBot
+Disallow: /
+
+# AI Data Scraper
+# https://darkvisitors.com/agents/diffbot
+
+User-agent: Diffbot
 Disallow: /
 
 # AI Data Scraper
@@ -47,4 +47,26 @@ Disallow: /
 User-agent: omgili
 Disallow: /
 
-Sitemap: {{ metadata.url }}/sitemap.xml
+# Undocumented AI Agent
+# https://darkvisitors.com/agents/anthropic-ai
+
+User-agent: anthropic-ai
+Disallow: /
+
+# Undocumented AI Agent
+# https://darkvisitors.com/agents/claude-web
+
+User-agent: Claude-Web
+Disallow: /
+
+# Undocumented AI Agent
+# https://darkvisitors.com/agents/claudebot
+
+User-agent: ClaudeBot
+Disallow: /
+
+# Undocumented AI Agent
+# https://darkvisitors.com/agents/cohere-ai
+
+User-agent: cohere-ai
+Disallow: /
