--- a/src/assets/scss/layouts/home.scss
+++ b/src/assets/scss/layouts/home.scss
@@ -12,7 +12,8 @@
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-rows: auto auto;
-  column-gap: 70px;
+  // column-gap: 70px;
+  column-gap: 100px;
   max-width: 1100px;
   margin: 0 auto;
 
