--- a/src/index.njk
+++ b/src/index.njk
@@ -34,7 +34,7 @@ section: home
   {{ articlelist(
     articles = collections.post | reverse,
     show_tags = true,
-    limit = 4
+    limit = 6
   ) }}
   <br>
   
@@ -50,7 +50,7 @@ section: home
   {# Status.lol #}
   <div class="list-header">
     <h2 class="list-header__title"><i class="fa-regular fa-comment-dots"></i> Statuslog</h2>
-    <a class="btn btn--outline btn--sm" href="https://binarydigit.status.lol/">All Statuses</a>
+    <a class="btn btn--outline btn--sm" href="https://binarydigit.status.lol/">Latest Statuses</a>
   </div>
     <script src="https://status.lol/binarydigit.js?time&link&fluent"></script>
 
