add new badge in footer

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -10,7 +10,9 @@
     </p>
  {# </small> #}
  <p>
-  <a href="https://ko-fi.com/andycarolan/shop"><img src="/assets/img/NoAi_03.png" alt="button created by Andy Carolan"></a>
+  <a href="https://ko-fi.com/andycarolan/shop"><img src="https://cdn.some.pics/binarydigit/664a499947519.png" alt="button created by Andy Carolan"></a>
+ &nbsp; 
+  <a href="https://ko-fi.com/andycarolan/shop"><img src="https://cdn.some.pics/binarydigit/664a490952787.png" alt="button created by Andy Carolan"></a>
  </p>
   </center>
   
