--- a/src/index.njk
+++ b/src/index.njk
@@ -27,8 +27,8 @@ section: home
 
   {# Articles #}
   <div class="list-header">
-    <h2 class="list-header__title"><i class="fa-solid fa-newspaper"></i> Latest Posts</h2>
-    <a class="btn btn--outline btn--sm" href="/blog">View All</a>
+    <h2 class="list-header__title"><i class="fa-solid fa-file-pen"></i> Latest Posts</h2>
+    <a class="btn btn--outline btn--sm" href="/blog">View All Posts</a>
   </div>
   {% from "macros/articlelist.njk" import articlelist %}
   {{ articlelist(
@@ -50,7 +50,7 @@ section: home
   {# Status.lol #}
   <div class="list-header">
     <h2 class="list-header__title"><i class="fa-regular fa-comment-dots"></i> Statuslog</h2>
-    <a class="btn btn--outline btn--sm" href="https://binarydigit.status.lol/">Latest Statuses</a>
+    <a class="btn btn--outline btn--sm" href="https://binarydigit.status.lol/">View Latest Statuses</a>
   </div>
     <script src="https://status.lol/binarydigit.js?time&link&fluent"></script>
 
